[gd_scene load_steps=19 format=2]

[ext_resource path="res://components/popups/popup_connect.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/dark_theme.tres" type="Theme" id=2]
[ext_resource path="res://components/config/component_config.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Resoto_logo_and_text.svg" type="Texture" id=4]
[ext_resource path="res://scripts/ui_main.gd" type="Script" id=5]
[ext_resource path="res://scripts/ui_menu.gd" type="Script" id=6]
[ext_resource path="res://scripts/ui_popup_manager.gd" type="Script" id=7]
[ext_resource path="res://scripts/ui_content.gd" type="Script" id=8]
[ext_resource path="res://components/terminal/component_terminal_manager.tscn" type="PackedScene" id=9]
[ext_resource path="res://components/toast/ToastManager.tscn" type="PackedScene" id=10]
[ext_resource path="res://scripts/tools/browser_copy_paste_fix.gd" type="Script" id=11]
[ext_resource path="res://components/popups/graph_popup.gd" type="Script" id=12]
[ext_resource path="res://assets/gear.png" type="Texture" id=13]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.161705, 0.119476, 0.175781, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.105882, 0.0941176, 0.109804, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.160784, 0.117647, 0.176471, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color( 0, 0, 0, 0.113725 )
shadow_size = 10
shadow_offset = Vector2( 0, 6 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.160784, 0.117647, 0.176471, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_bottom = 1
border_color = Color( 0.313726, 0.223529, 0.435294, 1 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.0669491, 0.0597887, 0.0693359, 1 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
script = ExtResource( 5 )

[node name="Content" type="CanvasLayer" parent="."]
script = ExtResource( 8 )

[node name="Content" type="MarginContainer" parent="Content"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_constants/margin_right = 10
custom_constants/margin_top = 40
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="TerminalManager" parent="Content/Content" instance=ExtResource( 9 )]

[node name="Config" parent="Content" instance=ExtResource( 3 )]
visible = false

[node name="MenuBar" type="CanvasLayer" parent="."]
layer = 20
follow_viewport_enable = true

[node name="MenuContainer" type="VBoxContainer" parent="MenuBar"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 2 )

[node name="Menu" type="PanelContainer" parent="MenuBar/MenuContainer"]
margin_right = 1920.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 3 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="HBoxContainer" parent="MenuBar/MenuContainer/Menu"]
margin_right = 1920.0
margin_bottom = 32.0
custom_constants/separation = 0

[node name="Spacer2" type="MarginContainer" parent="MenuBar/MenuContainer/Menu/Title"]
margin_right = 10.0
margin_bottom = 32.0
rect_min_size = Vector2( 10, 0 )

[node name="TextureRect" type="TextureRect" parent="MenuBar/MenuContainer/Menu/Title"]
margin_left = 10.0
margin_right = 74.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Spacer" type="MarginContainer" parent="MenuBar/MenuContainer/Menu/Title"]
margin_left = 74.0
margin_right = 892.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="SideMenu" type="MarginContainer" parent="MenuBar/MenuContainer/Menu/Title"]
margin_left = 892.0
margin_right = 1027.0
margin_bottom = 32.0
grow_horizontal = 0
grow_vertical = 0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MenuBar/MenuContainer/Menu/Title/SideMenu"]
margin_left = 4.0
margin_top = 4.0
margin_right = 131.0
margin_bottom = 28.0

[node name="ButtonConfig" type="Button" parent="MenuBar/MenuContainer/Menu/Title/SideMenu/HBoxContainer"]
margin_right = 53.0
margin_bottom = 24.0
text = "config"

[node name="ButtonDocs" type="Button" parent="MenuBar/MenuContainer/Menu/Title/SideMenu/HBoxContainer"]
margin_left = 57.0
margin_right = 99.0
margin_bottom = 24.0
text = "docs"

[node name="Config" type="MenuButton" parent="MenuBar/MenuContainer/Menu/Title/SideMenu/HBoxContainer"]
margin_left = 103.0
margin_right = 127.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
icon = ExtResource( 13 )
expand_icon = true
items = [ "Backup Model", null, 0, false, false, 0, 0, null, "", false, "Restore Model", null, 0, false, false, 1, 0, null, "", false, "Graph", null, 0, false, false, 2, 0, null, "", false ]

[node name="ButtonDocs" type="Button" parent="MenuBar/MenuContainer/Menu/Title/SideMenu"]
margin_left = 4.0
margin_top = 4.0
margin_right = 131.0
margin_bottom = 28.0
text = "docs"

[node name="Spacer2" type="MarginContainer" parent="MenuBar/MenuContainer/Menu/Title"]
margin_left = 1027.0
margin_right = 1037.0
margin_bottom = 32.0
rect_min_size = Vector2( 10, 0 )

[node name="TextureRect" type="TextureRect" parent="MenuBar/MenuContainer/Menu/Title"]
margin_left = 1037.0
margin_right = 1101.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Spacer" type="MarginContainer" parent="MenuBar/MenuContainer/Menu/Title"]
margin_left = 1101.0
margin_right = 1920.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="Title" type="HBoxContainer" parent="MenuBar/MenuContainer/Menu"]
margin_right = 1920.0
margin_bottom = 32.0
custom_constants/separation = 0

[node name="Popups" type="CanvasLayer" parent="."]
layer = 30
script = ExtResource( 7 )

[node name="BG" type="ColorRect" parent="Popups"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0745098, 0.0352941, 0.0901961, 0.866667 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectPopup" type="PopupDialog" parent="Popups"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1920.0
margin_bottom = -1080.0
rect_min_size = Vector2( 400, 150 )
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 7 )
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="VBoxContainer" parent="Popups/ConnectPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="Popups/ConnectPopup/Content"]
margin_right = 400.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 0 )
custom_styles/normal = SubResource( 8 )
text = "Connect to Resoto Core"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="Popups/ConnectPopup/Content"]
margin_top = 20.0
margin_right = 400.0
margin_bottom = 158.0
custom_constants/margin_right = 20
custom_constants/margin_top = 10
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Connect" type="VBoxContainer" parent="Popups/ConnectPopup/Content/MarginContainer"]
margin_left = 20.0
margin_top = 10.0
margin_right = 380.0
margin_bottom = 118.0
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectStatusLabel" type="Label" parent="Popups/ConnectPopup/Content/MarginContainer/Connect"]
margin_right = 360.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 7
text = "Connecting"
align = 1
autowrap = true

[node name="HSeparator" type="HSeparator" parent="Popups/ConnectPopup/Content/MarginContainer/Connect"]
modulate = Color( 1, 1, 1, 0.415686 )
margin_top = 24.0
margin_right = 360.0
margin_bottom = 28.0

[node name="Label" type="Label" parent="Popups/ConnectPopup/Content/MarginContainer/Connect"]
margin_top = 32.0
margin_right = 360.0
margin_bottom = 52.0
rect_min_size = Vector2( 100, 0 )
text = "PSK:"

[node name="PSKLineEdit" type="LineEdit" parent="Popups/ConnectPopup/Content/MarginContainer/Connect"]
margin_top = 56.0
margin_right = 360.0
margin_bottom = 80.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="ButtonConnect" type="Button" parent="Popups/ConnectPopup/Content/MarginContainer/Connect"]
margin_top = 84.0
margin_right = 360.0
margin_bottom = 108.0
text = "Connect"

[node name="ConnectDelay" type="Timer" parent="Popups/ConnectPopup/Content/MarginContainer/Connect"]
wait_time = 0.1
one_shot = true

[node name="ConnectTimeoutTimer" type="Timer" parent="Popups/ConnectPopup/Content/MarginContainer/Connect"]

[node name="GraphPopup" type="PopupDialog" parent="Popups"]
visible = true
margin_top = 163.0
margin_right = 400.0
margin_bottom = 384.0
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 7 )
popup_exclusive = true
script = ExtResource( 12 )

[node name="Label" type="Label" parent="Popups/GraphPopup"]
anchor_right = 1.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 0 )
custom_styles/normal = SubResource( 8 )
text = "Graph"
align = 1

[node name="GridContainer" type="GridContainer" parent="Popups/GraphPopup"]
anchor_right = 1.0
margin_left = 16.0
margin_top = 29.0
margin_right = -16.0
margin_bottom = 93.0
custom_constants/vseparation = 6
columns = 2

[node name="Label" type="Label" parent="Popups/GraphPopup/GridContainer"]
margin_top = 2.0
margin_right = 84.0
margin_bottom = 22.0
text = "Graph Root:"

[node name="GraphsOptionButton" type="OptionButton" parent="Popups/GraphPopup/GridContainer"]
margin_left = 88.0
margin_right = 368.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="Popups/GraphPopup/GridContainer"]
margin_top = 32.0
margin_right = 84.0
margin_bottom = 52.0
text = "Graph File:"

[node name="HBoxContainer" type="HBoxContainer" parent="Popups/GraphPopup/GridContainer"]
margin_left = 88.0
margin_top = 30.0
margin_right = 368.0
margin_bottom = 54.0

[node name="FileNameLabel" type="Label" parent="Popups/GraphPopup/GridContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 138.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.394368, 0.339131, 0.459961, 1 )
custom_styles/normal = SubResource( 20 )

[node name="LoadButton" type="Button" parent="Popups/GraphPopup/GridContainer/HBoxContainer"]
margin_left = 142.0
margin_right = 280.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Load File"

[node name="MergeButton" type="Button" parent="Popups/GraphPopup"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -32.0
margin_right = -16.0
margin_bottom = -8.0
disabled = true
text = "Restore Graph"

[node name="BackupButton" type="Button" parent="Popups/GraphPopup"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -248.0
margin_top = -32.0
margin_right = -136.0
margin_bottom = -8.0
text = "Backup Graph"

[node name="CloseButton" type="Button" parent="Popups/GraphPopup"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -32.0
margin_right = 80.0
margin_bottom = -8.0
text = "Close"

[node name="Information" type="RichTextLabel" parent="Popups/GraphPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 93.0
margin_right = -16.0
margin_bottom = -40.0
mouse_filter = 2
custom_styles/normal = SubResource( 19 )

[node name="ToastManager" parent="Popups" instance=ExtResource( 10 )]

[node name="ToastManager" parent="Popups" instance=ExtResource( 10 )]

[node name="MenuBar" type="CanvasLayer" parent="."]
layer = 20
follow_viewport_enable = true

[node name="BrowserCopyPasteWatcher" type="Node" parent="."]
script = ExtResource( 11 )

[connection signal="close_config" from="Content/Config" to="Content" method="_on_Config_close_config"]
[connection signal="pressed" from="MenuBar/MenuContainer/Menu/Title/SideMenu/HBoxContainer/ButtonConfig" to="Content" method="_on_ButtonConfig_pressed"]
[connection signal="pressed" from="MenuBar/MenuContainer/Menu/Title/SideMenu/HBoxContainer/ButtonDocs" to="MenuBar/MenuContainer/Menu" method="_on_ButtonDocs_pressed"]
[connection signal="pressed" from="MenuBar/MenuContainer/Menu/Title/SideMenu/ButtonDocs" to="MenuBar/MenuContainer/Menu" method="_on_ButtonDocs_pressed"]
[connection signal="about_to_show" from="Popups/ConnectPopup" to="Popups/ConnectPopup/Content/MarginContainer/Connect" method="_on_ConnectPopup_about_to_show"]
[connection signal="text_entered" from="Popups/ConnectPopup/Content/MarginContainer/Connect/PSKLineEdit" to="Popups/ConnectPopup/Content/MarginContainer/Connect" method="_on_PSKLineEdit_text_entered"]
[connection signal="pressed" from="Popups/ConnectPopup/Content/MarginContainer/Connect/ButtonConnect" to="Popups/ConnectPopup/Content/MarginContainer/Connect" method="_on_ButtonConnect_pressed"]
[connection signal="timeout" from="Popups/ConnectPopup/Content/MarginContainer/Connect/ConnectDelay" to="Popups/ConnectPopup/Content/MarginContainer/Connect" method="_on_ConnectDelay_timeout"]
[connection signal="timeout" from="Popups/ConnectPopup/Content/MarginContainer/Connect/ConnectTimeoutTimer" to="Popups/ConnectPopup/Content/MarginContainer/Connect" method="_on_ConnectTimeoutTimer_timeout"]
[connection signal="about_to_show" from="Popups/GraphPopup" to="Popups/GraphPopup" method="_on_GraphPopup_about_to_show"]
[connection signal="pressed" from="Popups/GraphPopup/GridContainer/HBoxContainer/LoadButton" to="Popups/GraphPopup" method="_on_LoadButton_pressed"]
[connection signal="pressed" from="Popups/GraphPopup/MergeButton" to="Popups/GraphPopup" method="_on_MergeButton_pressed"]
[connection signal="pressed" from="Popups/GraphPopup/BackupButton" to="Popups/GraphPopup" method="_on_BackupButton_pressed"]
[connection signal="pressed" from="Popups/GraphPopup/CloseButton" to="Popups/GraphPopup" method="_on_CloseButton_pressed"]
